--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Source Sans Pro", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+.bd-content {
+  min-height: 76vh;
+}
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.btn:focus {
+  outline: none;
+  box-shadow: none;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+}
+.release i {
+  padding-right: 5px;
+}
+.navbar-toggler:focus {
+  box-shadow: none;
+}
+
+.form-control:focus {
+  border-color: aliceblue;
+  box-shadow: none;
+}
+
+.text-white a {
+  color: white !important;
+}
+.nav-footer {
+  background-color: rgba(3, 37, 65, 1);
+}
+@media (max-width: 576px) {
+  .socialinks {
+    width: 100%;
+  }
 }
